
BUG FIXES:
- Apple syrup textures working in fruit bread/muffins
- Mash textures in troughs fixed (thanks to Whiskey Sunshine)
- Clarified broth gives correct expanded nutrients
- Part-baked vegetables now expire properly

NEW FOOD:
- Dried pasta added (thanks to Origami!)

MISC: 
- Food oil recipes compressed; Superfuel compatibility updated (thanks to Whiskey Sunshine!)

2.0.0-dev.6

HANDBOOK THINGS:
- Sap collecting info moved from handbook guide to spile and sap entries
- Vanilla dough grouped in handbook
- Handbook entries added for almost every item and food
- Text added to vanilla entries for cider/spirits to explain EF aging
- Text added to vanilla dough to explain EF expansions

REBALANCING:
- Cheese in meal patched removed; now handled in vanilla
- Cottage cheese patch adding "nutritionPropsWhenInMeal" removed
- Dried seaweed production chain lengthened; now it must be washed and dried before roasting in the oven
- Dried seaweed nutrition buffed from 20 to 30; nutritionPropsWhenInMeal buffed from 30 to 45
- Default gelatin nutrition turned from Protein back to Fruit
- Soaked soybeans require 3 days in barrel, down from 14
- Cultured soybeans require 7 days in barrel, down from 14
- Peanut sauce can be used in salad and pasta meals
- Peanut sauce can be made with fish sauce
- Lard harden timer reduced from 180 hours to 18 hours 
- Legumes juice into more oil
- Syrup can no longer be drunk straight
- Yogurt starter must be simmered with pasteurized milk to create fermenting yogurt
- Remove lard from the "broth" ingredient of dough to avoid ordering issues (thanks to ividyon)

BUG FIXES:
- NutritionProps removed from salad dressing
- Olives can be pressed into oil again
- Candied apple in fruit bar visual fixed

NEW FOOD:
- Salad dressing split into more variants (basic, savory, smooth, sweet, deluxe)

MISC: 
- Small bones can be used like bones to make broth/gelatin
- Fermented fish slop pile voxelized to resemble pickled soybean pile