@@ -1,6 +1,6 @@
 [
  {
-    "file": "expandedfoods:recipes/grid/superfuel/SFfirelog.json",
+    "file": "expandedfoods:recipes/grid/superfuel/firelog.json",
     "op": "addmerge", 
     "path": "/0/enabled", 
     "value": "false",
@@ -8,7 +8,7 @@
     "dependsOn": [{ "modid": "superfuel", "invert":  true }]
  },
  {
-    "file": "expandedfoods:recipes/grid/superfuel/SFfirelog.json",
+    "file": "expandedfoods:recipes/grid/superfuel/firelog.json",
     "op": "addmerge", 
     "path": "/1/enabled", 
     "value": "false",
@@ -16,7 +16,7 @@
     "dependsOn": [{ "modid": "superfuel", "invert":  true }]
  },
  {
-    "file": "expandedfoods:recipes/grid/superfuel/SFfirelog.json",
+    "file": "expandedfoods:recipes/grid/superfuel/firelog.json",
     "op": "addmerge", 
     "path": "/2/enabled", 
     "value": "false",
@@ -24,7 +24,7 @@
     "dependsOn": [{ "modid": "superfuel", "invert":  true }]
  },
  {
-    "file": "expandedfoods:recipes/grid/superfuel/SFbowlpeat.json",
+    "file": "expandedfoods:recipes/grid/superfuel/bowlpeat.json",
     "op": "addmerge", 
     "path": "/0/enabled", 
     "value": "false",
@@ -32,7 +32,7 @@
     "dependsOn": [{ "modid": "superfuel", "invert":  true }]
  },
  {
-    "file": "expandedfoods:recipes/grid/superfuel/SFoillamp.json",
+    "file": "expandedfoods:recipes/grid/superfuel/oillamp.json",
     "op": "addmerge", 
     "path": "/0/enabled", 
     "value": "false",
@@ -40,7 +40,7 @@
     "dependsOn": [{ "modid": "superfuel", "invert":  true }]
  },
  {
-    "file": "expandedfoods:recipes/grid/superfuel/SFoilcandle.json",
+    "file": "expandedfoods:recipes/grid/superfuel/oilcandle.json",
     "op": "addmerge", 
     "path": "/0/enabled", 
     "value": "false",
@@ -48,7 +48,7 @@
     "dependsOn": [{ "modid": "superfuel", "invert":  true }]
  },
  {
-    "file": "expandedfoods:recipes/grid/superfuel/SFoilcandle.json",
+    "file": "expandedfoods:recipes/grid/superfuel/oilcandle.json",
     "op": "addmerge", 
     "path": "/1/enabled", 
     "value": "false",
@@ -56,7 +56,7 @@
     "dependsOn": [{ "modid": "superfuel", "invert":  true }]
  },
  {
-    "file": "expandedfoods:recipes/grid/superfuel/SFoilcandle.json",
+    "file": "expandedfoods:recipes/grid/superfuel/oilcandle.json",
     "op": "addmerge", 
     "path": "/2/enabled", 
     "value": "false",
@@ -64,7 +64,7 @@
     "dependsOn": [{ "modid": "superfuel", "invert":  true }]
  },
  {
-    "file": "expandedfoods:recipes/grid/superfuel/SFoilcandle.json",
+    "file": "expandedfoods:recipes/grid/superfuel/oilcandle.json",
     "op": "addmerge", 
     "path": "/3/enabled", 
     "value": "false",
@@ -72,7 +72,7 @@
     "dependsOn": [{ "modid": "superfuel", "invert":  true }]
  },
  {
-    "file": "expandedfoods:recipes/grid/superfuel/SFoilcandle.json",
+    "file": "expandedfoods:recipes/grid/superfuel/oilcandle.json",
     "op": "addmerge", 
     "path": "/4/enabled", 
     "value": "false",
@@ -80,7 +80,7 @@
     "dependsOn": [{ "modid": "superfuel", "invert":  true }]
  },
  {
-    "file": "expandedfoods:recipes/grid/superfuel/SFoilcandle.json",
+    "file": "expandedfoods:recipes/grid/superfuel/oilcandle.json",
     "op": "addmerge", 
     "path": "/5/enabled", 
     "value": "false",
