@@ -7,7 +7,7 @@
     		"W": { "type": "item", "code": "game:firewood", "quantity": 4},
     		"S": { "type": "block", "code": "game:metal-scraps"},
 		    "F": { "type": "block", "code": "game:woodbucket" },
-    		"L": { "type": "block", "code": "game:oillamp-up" }
+    		"L": { "type": "block", "code": "game:oillamp-*-up" }
     	},
 	    "attributes": {
 		    "liquidContainerProps": {
@@ -28,7 +28,7 @@
     		"W": { "type": "item", "code": "game:firewood", "quantity": 4},
     		"S": { "type": "item", "code": "hqzlights:metalstrip-*", "name": "metal"},
 		    "F": { "type": "block", "code": "aculinaryartillery:bottle-*-fired" },
-    		"L": { "type": "block", "code": "game:oillamp-up" }
+    		"L": { "type": "block", "code": "game:oillamp-*-up" }
     	},	
 	    "attributes": {
 		    "liquidContainerProps": {
@@ -49,7 +49,7 @@
     		"W": { "type": "item", "code": "game:firewood", "quantity": 4},
     		"S": { "type": "block", "code": "game:metal-scraps"},
 		    "F": { "type": "block", "code": "expandedfoods:hardlard" },
-    		"L": { "type": "block", "code": "game:oillamp-up" }
+    		"L": { "type": "block", "code": "game:oillamp-*-up" }
     	},
     	"width": 3,
     	"height": 3,
@@ -64,7 +64,7 @@
     		"W": { "type": "item", "code": "game:firewood", "quantity": 4},
     		"S": { "type": "item", "code": "hqzlights:metalstrip-*", "name": "metal"},
 		    "F": { "type": "block", "code": "expandedfoods:hardlard" },
-    		"L": { "type": "block", "code": "game:oillamp-up" }
+    		"L": { "type": "block", "code": "game:oillamp-*-up" }
     	},
     	"width": 3,
     	"height": 3,
