@@ -157,6 +157,7 @@ NEW FOOD:
 
 MISC: 
 - Food oil recipes compressed; Superfuel compatibility updated (thanks to Whiskey Sunshine!)
+- Superfuel compatibility removed in favor of Superfuel Resumed
 
 2.0.0-dev.6
 
